--- a/profile.html
+++ b/profile.html
@@ -496,7 +496,7 @@
             profileAvatar.src = currentUserData.avatar || 'https://via.placeholder.com/100';
             profileName.textContent = currentUserData.name || 'مستخدم';
             if (currentUserData.verified) {
-                profileName.innerHTML += ` <img src="https://img.icons8.com/color/999/tiktok-verified-account.png" class="verified-icon" alt="موثق">`;
+                profileName.innerHTML += ` <img src="https://firebasestorage.googleapis.com/v0/b/smart-pay-6a9b8.appspot.com/o/%D9%A2%D9%A0%D9%A2%D9%A5%D9%A0%D9%A2%D9%A2%D9%A6_%D9%A1%D9%A6%D9%A0%D9%A5%D9%A5%D9%A6.png?alt=media&token=e0134418-e89c-46fd-a822-e34ebe285ad2" class="verified-icon" alt="موثق">`;
             }
             profileHandle.textContent = currentUserData.handle || '@user';
 
