--- a/search.html
+++ b/search.html
@@ -808,7 +808,7 @@
                     <img src="${user.avatar || 'https://via.placeholder.com/40'}" class="suggestion-avatar" alt="صورة المستخدم">
                     <div>
                         <div class="suggestion-name">${user.name || 'مستخدم'}
-                            ${user.verified ? `<img src="https://img.icons8.com/color/999/tiktok-verified-account.png" class="verified-icon" alt="موثق">` : ''}
+                            ${user.verified ? `<img src="https://firebasestorage.googleapis.com/v0/b/smart-pay-6a9b8.appspot.com/o/%D9%A2%D9%A0%D9%A2%D9%A5%D9%A0%D9%A2%D9%A2%D9%A6_%D9%A1%D9%A6%D9%A0%D9%A5%D9%A5%D9%A6.png?alt=media&token=e0134418-e89c-46fd-a822-e34ebe285ad2" class="verified-icon" alt="موثق">` : ''}
                         </div>
                         <div class="suggestion-handle">${user.handle || '@user'}</div>
                     </div>
@@ -830,7 +830,7 @@
                             <img src="${user.avatar || 'https://via.placeholder.com/50'}" class="user-avatar" alt="صورة المستخدم">
                             <div class="user-details">
                                 <div class="user-name">${user.name || 'مستخدم'}
-                                    ${user.verified ? `<img src="https://img.icons8.com/color/999/tiktok-verified-account.png" class="verified-icon" alt="موثق">` : ''}
+                                    ${user.verified ? `<img src="https://firebasestorage.googleapis.com/v0/b/smart-pay-6a9b8.appspot.com/o/%D9%A2%D9%A0%D9%A2%D9%A5%D9%A0%D9%A2%D9%A2%D9%A6_%D9%A1%D9%A6%D9%A0%D9%A5%D9%A5%D9%A6.png?alt=media&token=e0134418-e89c-46fd-a822-e34ebe285ad2" class="verified-icon" alt="موثق">` : ''}
                                 </div>
                                 <div class="user-handle">${user.handle || '@user'}</div>
                             </div>
@@ -877,7 +877,7 @@
                 profileModalHeader.innerHTML = `
                     <img src="${userData.avatar || 'https://via.placeholder.com/100'}" class="profile-modal-avatar" alt="صورة المستخدم" onclick="openImageModal('${userData.avatar || 'https://via.placeholder.com/100'}')">
                     <div class="profile-modal-name">${userData.name || 'مستخدم'}
-                        ${userData.verified ? `<img src="https://img.icons8.com/color/999/tiktok-verified-account.png" class="verified-icon" alt="موثق">` : ''}
+                        ${userData.verified ? `<img src="https://firebasestorage.googleapis.com/v0/b/smart-pay-6a9b8.appspot.com/o/%D9%A2%D9%A0%D9%A2%D9%A5%D9%A0%D9%A2%D9%A2%D9%A6_%D9%A1%D9%A6%D9%A0%D9%A5%D9%A5%D9%A6.png?alt=media&token=e0134418-e89c-46fd-a822-e34ebe285ad2" class="verified-icon" alt="موثق">` : ''}
                     </div>
                     <div class="profile-modal-handle">${userData.handle || '@user'}</div>
                 `;
@@ -1075,7 +1075,7 @@
                             <div class="comment-entry-content">
                                 <div class="comment-entry-name">
                                     ${comment.userName || 'مستخدم'}
-                                    ${commentUserVerified ? `<img src="https://img.icons8.com/color/999/tiktok-verified-account.png" class="verified-icon" alt="موثق">` : ''}
+                                    ${commentUserVerified ? `<img src="https://firebasestorage.googleapis.com/v0/b/smart-pay-6a9b8.appspot.com/o/%D9%A2%D9%A0%D9%A2%D9%A5%D9%A0%D9%A2%D9%A2%D9%A6_%D9%A1%D9%A6%D9%A0%D9%A5%D9%A5%D9%A6.png?alt=media&token=e0134418-e89c-46fd-a822-e34ebe285ad2" class="verified-icon" alt="موثق">` : ''}
                                 </div>
                                 <div class="comment-entry-text">${comment.text}</div>
                             </div>
